Fixes z-index with off canvas

--- a/public/scss/components/global/_offcanvas-nav.scss
+++ b/public/scss/components/global/_offcanvas-nav.scss
@@ -13,3 +13,7 @@
         line-height: 1.3;
     }
 }
+
+.js-off-canvas-exit {
+    z-index: 100;
+}
